use recommended flags from blog post